@@ -21,6 +21,7 @@ Other contributors, listed alphabetically, are:
 * Tim Baumann -- (Literate) Agda lexer
 * Paul Baumgart, 280 North, Inc. -- Objective-J lexer
 * Michael Bayer -- Myghty lexers
+* Thomas Beale -- Archetype lexers
 * John Benediktsson -- Factor lexer
 * Christopher Bertels -- Fancy lexer
 * Jarrett Billingsley -- MiniD lexer
