@@ -17,6 +17,7 @@ Version 2.1
   * Arduino (PR#442)
   * Modula-2 with multi-dialect support (#1090)
   * Fortran fixed format (PR#213)
+  * Archetype Definition language (PR#483)
 
 - Added styles:
 
